--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,13 @@ board_upload.maximum_size = 16777216
 board_build.arduino.earlephilhower.usb_manufacturer = Tektite
 board_build.arduino.earlephilhower.usb_product = RotEv
 monitor_speed = 115200
+
+; [env]
+; platform = raspberrypi
+; framework = arduino
+
+
+; ; RP2350 based (ARM)
+; [env:rpipico2]
+; board = rpipico2
+; ; board_upload.maximum_size = 16777216
